--- a/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
@@ -229,7 +229,7 @@
                         </div>
                     </div>
                     <div class="row-fluid cust-padding-bw-row">
-                        <div class="span12 btn-padding-left btn-margin-top profile-button" style="text-align:center">
+                        <div class="span12 btn-padding-left btn-margin-top profile-button button-align-center">
                             <input type="submit" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style button-float btn-margin-left" id="btnUpdatePatientAccount" value="Update" onclick="return (validation());" />
                             <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style button-float" onclick="resetAction();" value="Reset" onclick="ClearMessage()" />
                         </div>
