--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -216,7 +216,7 @@
                     </div>
                 </div>
                 <div class="row-fluid">
-                    <div class="span12 btn-margin-top profile-button" style="text-align: center">
+                    <div class="span12 btn-margin-top profile-button button-align-center profile-margin-left">
                         <input type="submit" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style button-float" id="btnSubmit" value="Save" onclick="if (!ValidateAllControl()) return false;" />
                         <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style button-float" value="Reset" onclick="resetAction();" />
                     </div>
@@ -389,7 +389,7 @@
                         </div>
                     </div>
                     <div class="row-fluid">
-                        <div class="span12 btn-margin-top btn-margin-bottom profile-button docprofile-btn-padding" style="text-align: center">
+                        <div class="span12 btn-margin-top btn-margin-bottom profile-button docprofile-btn-padding button-align-center profile-margin-left">
                             <input type="button" id="btnLocationSubmit" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style button-float" value="Save" onclick="validateClinic()" />
                             <input type="button" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style button-float" onclick="closeDiv(); return false;" value="Close" />
                         </div>
