created Dr Name as a link & book appointment button is added

--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -49,7 +49,7 @@
                                             }
                                         </div>
                                         <div class='span8'>
-                                            <div class='ans_time_detail intermediate-size-padding'>Dr. @item.Doctor </div>
+                                            <div class='ans_time_detail intermediate-size-padding'><a class="ans_time_detail" target="_blank" href="../doctor/@item.Name_seo">Dr. @item.Doctor </a></div>
                                             <div class='title_text intermediate-size-padding'>
                                                 @item.Title
                                             </div>
