--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -145,7 +145,9 @@ a.question_text:hover {
     color: #A5AB51;
     font-family: Raleway,arial;
 }
-
+a.ans_time_detail:hover {
+    color: #788647;
+}
 .ans_text {
     line-height: 20px;
     text-align: justify;
