--- a/MiraiConsultMVC/Views/Feed/Feed.cshtml
+++ b/MiraiConsultMVC/Views/Feed/Feed.cshtml
@@ -80,10 +80,12 @@
                                 title = "";
                             template = "<div class='span12 custom-yellow-container'><div class='custom-inner-green-container'><a class='question_text' href='../answers/" + response[indexcnt].questionid + "' onclick=\"ga('send', 'event', 'Patient', 'Review Others Answers','"+ response[indexcnt].questiontext+"');\">" + response[indexcnt].questiontext + "</a></div> <div id=" + answerid + "ans>" +
                             "<div class='inner-count-likes pull-right' title='Thanked By Patient'> " + thanxcount + "</div><div class='inner-count-endorse pull-right' title='Endorsed'>" + endorsecount + " </div></div></div><div class='row-fluid'>" +
-                            "<div class='row-fluid custom-occupy'><div class='span1 hidden-phone'><div class='center_align'><div class='feedDocImage img' style='margin-bottom:10px'><img src=" + img + "></div></div></div><div class='visible-phone feedDocImage img' style='margin-bottom:10px'><img src=" + img + "></div><div class='span6  middle-size-padding '><div class='ans_time_detail'>Dr. " + response[indexcnt].answerreplyedby + " </div><div class='title_text'><b>" + title + "</b></div></div>";
+                            "<div class='row-fluid custom-occupy'><div class='span1 hidden-phone'><div class='center_align'><div class='feedDocImage img' style='margin-bottom:10px'><img src=" + img + "></div></div></div><div class='visible-phone feedDocImage img' style='margin-bottom:10px'><img src=" + img + "></div><div class='span6  middle-size-padding '><div class='ans_time_detail'><a class='ans_time_detail' target='_blank' href='../doctor/" + response[indexcnt].name_seo +"'>Dr. " + response[indexcnt].answerreplyedby + "</a> </div><div class='title_text'><b>" + title + "</b></div></div>";
                             if (document.getElementById("HiddenUserType").value != "0") {
                                 if (response[indexcnt].isdocconnectuser != false && docconnecturl != "")
                                     template = template + "<div class='span3 pull-right hidden-phone'><a class='btn book_appt_button' onclick='bookaptclicked(\"" + response[indexcnt].docid + "\")' href='" + docconnecturl + response[indexcnt].docid + "&frmaskmirai=1' Class='btn book_appt_button' target='_blank' > Book Appointment </a><br/><br/></div>";
+                                if (response[indexcnt].isdocconnectuser != true)
+                                    template = template + "<div class='span3 pull-right hidden-phone'><a Class='btn book_appt_button' target='_blank' href='../doctor/" + response[indexcnt].name_seo + "'>Book Appointment </a></div>";
                             }
                             template = template + "</div>";
                             if (ansimg.length > 0) {
@@ -95,6 +97,8 @@
                             if (document.getElementById("HiddenUserType").value != "0") {
                                 if (response[indexcnt].isdocconnectuser != false && docconnecturl != "")
                                     template = template + "<div class='span3 pull-left visible-phone'><a class='btn book_appt_button' onclick='bookaptclicked(\"" + response[indexcnt].docid + "\")' href='" + docconnecturl + response[indexcnt].docid + "&frmaskmirai=1' Class='btn book_appt_button' target='_blank' > Book Appointment </a></div>";
+                                if (response[indexcnt].isdocconnectuser != true)
+                                    template = template + "<div class='span3 pull-left visible-phone'><a Class='btn book_appt_button make_appointment_btn btn-margin-bottom' target='_blank' href='../doctor/" + response[indexcnt].name_seo + "'>Book Appointment </a></div>";
                             }
                             if (document.getElementById("HiddenUserType").value != "0") {
                                 template = template + "<div class='row-fluid margintop_tosharebutn'>";
