--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -4103,3 +4103,35 @@ table.cust-table {
     word-wrap:break-word;
 }
 
+.doc-profile-title {
+    font-family: 'Open Sans', Verdana;
+    font-size: 13pt;
+    color: #F37363;
+    padding: 5px 0 10px 0;
+    font-weight: normal;
+    text-transform: uppercase;
+}
+.loc-label {
+    font-size: 14px;
+    font-weight: 700;
+    color: #7182a3;
+    margin-right: 5px;
+}
+
+.doc-details-div {
+    margin: 5px 0px 10px 0px;
+}
+
+.doc-clinic-details {
+    color: #a9af41;
+    font-size: 14px;
+    font-weight: 800;
+}
+.border-color-doc-details{
+    border-right: 1px solid;
+    border-color: #F37363;
+    margin-right: 13px;
+}
+.doc-details-div{
+    margin: 5px 0px 10px 0px;
+}
