--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -153,7 +153,7 @@
                 </div>
                 <div class="row-fluid">
                     <hr class="doc-details-hr" />
-                    @if (!string.IsNullOrEmpty(ViewBag.isConsult) && Convert.ToInt32(ViewBag.isConsult) != 1)
+                    @if (ViewBag.isConsult != 0 && Convert.ToInt32(ViewBag.isConsult) != 1)
                     {
                         <div class="doc-clinic-details" style="margin-bottom:15px">History Of Responses</div>
                         <div id="feed" class="margin_bottom"></div>
