--- a/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
@@ -71,7 +71,7 @@
                                         }
                                         if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(item.IsDocconnectUser) == false)
                                         {
-                                            <a class='pull-right btn book_appt_button' href='../doctor/@item.Name_seo' target='_blank'>Book Appointment </a>
+                                            <a class='pull-right btn book_appt_button' href='../doctor/@item.Name_seo?isConsult=1' target='_blank'>Book Appointment </a>
                                         }
                                     }
                                 </div>
@@ -104,7 +104,7 @@
                                     }
                                     if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(item.IsDocconnectUser) == false)
                                     {
-                                        <a class='pull-left btn book_appt_button' href='../doctor/@item.Name_seo' target='_blank'>Book Appointment </a>
+                                        <a class='pull-left btn book_appt_button' href='../doctor/@item.Name_seo ?isConsult = 1' target='_blank'>Book Appointment </a>
                                     }
                                 }
                             </div>
