Link is available for doctors name on topics, topics details page & similar question Page

--- a/MiraiConsultMVC/Views/Home/topicdetails.cshtml
+++ b/MiraiConsultMVC/Views/Home/topicdetails.cshtml
@@ -52,7 +52,7 @@
                                             </div>
                                         </div>
                                         <div class='span6 middle-size-padding'>
-                                            <div class='ans_time_detail'>@Model.ToList()[i].answerreplyedby </div>
+                                            <div class='ans_time_detail'><a class="ans_time_detail" target="_blank" href="../doctor/@Model.ToList()[i].name_seo">@Model.ToList()[i].answerreplyedby </a></div>
                                             <div class='title_text'>
                                                 @Model.ToList()[i].Title
                                             </div>
