--- a/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
+++ b/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
@@ -79,7 +79,7 @@
                                         </div>
                                     </div>
                                     <div class='span6 middle-size-padding'>
-                                        <div class='ans_time_detail'>Dr. @Model.ToList()[i].answerreplyedby </div>
+                                        <div class='ans_time_detail'><a class='ans_time_detail' target="_blank" href="../doctor/@Model.ToList()[i].name_seo">Dr. @Model.ToList()[i].answerreplyedby </a></div>
                                         <div class='title_text'>
                                             @Model.ToList()[i].Title
                                         </div>
