--- a/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
+++ b/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
@@ -165,7 +165,7 @@
                                 template = " <div class='row-fluid icon_padding_bottom'>"
 
                             template = template + "<div class='span11 div_margin_bottom'><div class='row-fluid margin-left-doc-details'><div class='span2 img_width'><div class='avtar img'><img src=" + img + "></div>" +
-                            "</div><div class='span7 margin_leftdocdetail middle-size-padding div-margin-left'><div class='subtitle_fontSize find-doc-name'><a class='subtitle_fontSize find-doc-name question_text' target='_blank' href='../doctor/" + response[indexcnt].name_seo + "'>" + response[indexcnt].name + "</a></div>" +
+                            "</div><div class='span7 margin_leftdocdetail middle-size-padding div-margin-left'><div class='subtitle_fontSize find-doc-name'><a class='subtitle_fontSize find-doc-name question_text' target='_blank' href=@Url.Action("Doctors", "doctorsPublicProfile", new { name_seo = response[indexcnt].name_seo })>" + response[indexcnt].name + "</a></div>" +
                             "<div class='subtitle_fontSize'><div class='span3'><b>Specialities: </b></div><div class='span9 content_wrap searchresult-margin-left'>" + response[indexcnt].specialities + "</div></div><div class='subtitle_fontSize'><div class='span3'><b>Location: </b></div><div class='span9 content_wrap searchresult-margin-left'>" + loaction + "</div></div></div>"
                             if (document.getElementById("HiddenUserType").value == "2") {
                                 if (response[indexcnt].isdocconnectuser != false && docconnecturl != "")
