--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -4194,3 +4194,6 @@ table.cust-table {
     margin: 1.25rem 0 1.1875rem;
     height: 0;
 }
+.doc-div-min-height {
+    min-height:25px !important;
+}
