--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -46,7 +46,7 @@
                     </div>
                     <div class="span9">
                         <div class="span12">
-                            <h4 id="ClinicName" class="doc-clinic-details" style="margin-left:-13px;margin-bottom:15px;">
+                            <h4 id="ClinicName" class="doc-clinic-details" style="margin-left:-13px;margin-bottom:15px;height:inherit">
                                 CLINIC/ HOSPITAL ADDRESS DETAILS:
                             </h4>
                         </div>
@@ -61,11 +61,11 @@
                                         if (count % 2 == 0)
                                         {
                                             <div class="span5" style="float:left;margin-left:0px;margin-bottom:20px;">
-                                                <div class="span12" style="margin:0px"><div class="left loc-label span5"> Clinic Name:</div><div class="span5 left" style="word-wrap: break-word">@location.ClinicName</div></div>
-                                                <div class="span12" style="margin:0px"><div class="left loc-label span5">City:</div><div class="span5 left" style="word-wrap: break-word">@location.City</div></div>
-                                                <div class="span12" style="margin:0px"><div class="left loc-label span5">Location:</div><div class="span5 left" style="word-wrap: break-word">@location.Location</div></div>
-                                                <div class="span12" style="margin:0px"><div class="left loc-label span5">Address:</div><div class="span5 left" style="word-wrap: break-word">@location.Address</div></div>
-                                                <div class="span12" style="margin:0px"><div class="left loc-label span5">Phone:</div><div class="span5 left" style="word-wrap: break-word">@location.Telephone</div></div>
+                                                <div class="span12 doc-div-min-height" style="margin: 0px;"><div class="left loc-label doc-div-min-height span4"> Clinic Name:</div><div class="span7 doc-div-min-height left" style="word-wrap: break-word">@location.ClinicName</div></div>
+                                                <div class="span12 doc-div-min-height" style="margin: 0px;"><div class="left loc-label doc-div-min-height span4">City:</div><div class="span7 doc-div-min-height left" style="word-wrap: break-word">@location.City</div></div>
+                                                <div class="span12 doc-div-min-height" style="margin: 0px;"><div class="left loc-label doc-div-min-height span4">Location:</div><div class="span7 doc-div-min-height left" style="word-wrap: break-word">@location.Location</div></div>
+                                                <div class="span12 doc-div-min-height" style="margin: 0px;"><div class="left loc-label doc-div-min-height span4">Address:</div><div class="span7 doc-div-min-height left" style="word-wrap: break-word;">@location.Address</div></div>
+                                                <div class="span12 doc-div-min-height" style="margin: 0px;"><div class="left loc-label doc-div-min-height span4">Phone:</div><div class="span7 doc-div-min-height left" style="word-wrap: break-word">@location.Telephone</div></div>
                                             </div>
                                             if(count!=Model.locations.Count)
                                             { 
@@ -75,11 +75,11 @@
                                         else
                                         {
                                             <div class="span5 border-color-doc-details" style="float: left; margin-left: 0px; margin-bottom: 20px">
-                                                <div class="span12" style="margin:0px"><div class="left loc-label span6">Clinic Name:</div><div class=" span5 left" style="word-wrap: break-word">@location.ClinicName</div></div>
-                                                <div class="span12" style="margin:0px"><div class="left loc-label span6">City:</div><div class="span5 left" style="word-wrap: break-word">@location.City</div></div>
-                                                <div class="span12" style="margin:0px"><div class="left loc-label span6">Location:</div><div class="span5 left" style="word-wrap: break-word">@location.Location</div></div>
-                                                <div class="span12" style="margin:0px"><div class="left loc-label span6">Address:</div><div class="span5 left" style="word-wrap: break-word">@location.Address</div></div>
-                                                <div class="span12" style="margin:0px"><div class="left loc-label span6">Phone:</div><div class="span5 left" style="word-wrap: break-word">@location.Telephone</div></div>
+                                                <div class="span12 doc-div-min-height" style="margin: 0px;"><div class="left loc-label doc-div-min-height span4">Clinic Name:</div><div class=" span7 doc-div-min-height left" style="word-wrap: break-word">@location.ClinicName</div></div>
+                                                <div class="span12 doc-div-min-height" style="margin: 0px;"><div class="left loc-label doc-div-min-height span4">City:</div><div class="span7 doc-div-min-height left" style="word-wrap: break-word">@location.City</div></div>
+                                                <div class="span12 doc-div-min-height" style="margin: 0px;"><div class="left loc-label doc-div-min-height span4">Location:</div><div class="span7 doc-div-min-height left" style="word-wrap: break-word">@location.Location</div></div>
+                                                <div class="span12 doc-div-min-height" style="margin: 0px;"><div class="left loc-label doc-div-min-height span4">Address:</div><div class="span7 doc-div-min-height left" style="word-wrap: break-word;">@location.Address</div></div>
+                                                <div class="span12 doc-div-min-height" style="margin: 0px;"><div class="left loc-label doc-div-min-height span4">Phone:</div><div class="span7 doc-div-min-height left" style="word-wrap: break-word">@location.Telephone</div></div>
                                             </div>
                                         }
                                         count++;
@@ -90,8 +90,8 @@
                         </div>
                         <div class="row-fluid">
                             <div class="span12"><h4 id="OtherDetails" class="doc-clinic-details">OTHER DETAILS:</h4></div>
-                            <div class="span5">
-                                <div class="border-color-doc-details" style="margin-bottom:15px">
+                            <div class="span5 border-color-doc-details" style="margin-left:0px;">
+                                <div style="margin-bottom:15px">
                                     @if (Model.specialities != null && Model.specialities.Count > 0)
                                     {
                                         <div><span class="left loc-label">Specialities:</span></div>
@@ -108,7 +108,7 @@
                                         }
                                     }
                                 </div>
-                                <div class="border-color-doc-details">
+                                <div>
 
                                     @if (Model.details != null && Model.details.Count > 0)
                                     {
@@ -128,7 +128,7 @@
                                     }
                                 </div>
                             </div>
-                            <div class="span5">
+                            <div class="span6">
                                 @if (Model.qualification != null && Model.qualification.Count > 0)
                                 {
                                     <div><span class="left loc-label">Education:</span></div>
