--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -75,7 +75,7 @@
                                         {
                                             <div class="span5 left doc-clinic-container" style="margin-left: 0;">
                                                 <div class="span12 doc-div-min-height margin-null">
-                                                    <div class="left loc-label doc-div-min-height span4"> 1Clinic Name:</div>
+                                                    <div class="left loc-label doc-div-min-height span4"> Clinic Name:</div>
                                                     <div class="span7 doc-div-min-height left doc-detail-word-break">@location.ClinicName</div>
                                                 </div>
                                                 <div class="span12 doc-div-min-height margin-null">
@@ -104,7 +104,7 @@
                                         {
                                             <div class="span5 border-color-doc-details left doc-clinic-container" style="margin-left: 0;">
                                                 <div class="span12 doc-div-min-height margin-null">
-                                                    <div class="left loc-label doc-div-min-height span4">2Clinic Name:</div>
+                                                    <div class="left loc-label doc-div-min-height span4">Clinic Name:</div>
                                                     <div class=" span7 doc-div-min-height left doc-detail-word-break">@location.ClinicName</div>
                                                 </div>
                                                 <div class="span12 doc-div-min-height margin-null">
