--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -249,7 +249,7 @@
                     <div class="row-fluid visible-phone">
                         <div class="span6 ">
                             <div id="ClinicName" class="span5 doc-clinic-container doc-clinic-details">
-                                CLINIC/ HOSPITAL ADDRESS DETAILS:
+                                OTHER DETAILS:
                             </div>
                         </div>
                     </div>
