--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -245,15 +245,15 @@
                             </div>
                         </div>
                     </div>
-                <div class="row-fluid visible-phone">
                     <div class="row-fluid visible-phone">
-                        <div class="span6 ">
-                            <div id="ClinicName" class="span5 doc-clinic-container doc-clinic-details">
-                                OTHER DETAILS:
+                        <div class="row-fluid visible-phone">
+                            <div class="span6 ">
+                                <div id="ClinicName" class="span5 doc-clinic-container doc-clinic-details">
+                                    OTHER DETAILS:
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
                         <div class="row-fluid">
                             <div class="span3">
                                 <div id="feedDocImage_SQ" class='span3'>
@@ -434,7 +434,8 @@
                         else {
                             template = template + "<div class='span11'><p class='ans_text' style='word-wrap: break-word;'>" + response[indexcnt].answertext + "</p></div>";
                         }
-                        if (document.getElementById("HiddenUserType").value != "0") {
+                        alert(document.getElementById("HiddenUserType").value)
+                        if (document.getElementById("HiddenUserType").value != "0" && document.getElementById("HiddenUserType").value != '') {
                             var url = document.getElementById("AskmiraiUrl").value;
                             var FBappkey = document.getElementById("FacebookAppKey").value;
                             template = template + "<div class='row-fluid margintop_tosharebutn'>" +
