--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -351,29 +351,8 @@
             </div>
         }
     </div>
+    <script src="~/Content/js/utility.js"></script>
     <script type="text/javascript">
-        var $dialog = $('<div id="ContactDeatilDiv"></div>')
-              .dialog({
-                  autoOpen: false,
-                  modal: true,
-                  height: 300,
-                  width: 400,
-                  resizable: false,
-                  position: 'center',
-                  open: function (event, ui) {
-                      $('#ContactDeatilDiv').css('overflow', 'hidden'); //this line does the actual hiding
-                  }
-              });
-        function ViewProfile(DoctorID) {
-            var page = "../Doctors/ContactDetail";
-            $dialog.html('<iframe style="border: 0px; " src="' + page + '" width="100%" height="100%"></iframe>')
-            .dialog('open');
-
-            $(".ui-dialog-titlebar").hide();
-        }
-        function closeDialog() {
-            $dialog.dialog('close');
-        }
         var indexoF;
         $(function () {
             @if (!(Model.locations != null && Model.locations.Count > 0))
