--- a/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
+++ b/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
@@ -96,7 +96,7 @@
                                     @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(Model.ToList()[i].isdocconnectuser)==false)
                                     {
                                         <div class="span3  pull-right hidden-phone">
-                                            <a class='btn book_appt_button' href='../doctor/@(Model.ToList()[i].name_seo)?isConsult=1' target='_blank'>Book Appointment </a>
+                                            <a class='btn book_appt_button' onclick="ViewProfile(@Model.ToList()[i].UserId)">Book Appointment </a>
                                             <br />
                                             <br />
                                         </div>
@@ -133,7 +133,7 @@
                                 {
                                     var href = (Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"]) + MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId)) + "&frmaskmirai=1").Trim();
                                     <div class="span3 offset1 pull-left visible-phone">
-                                        <a class='btn book_appt_button' href='../doctor/@(Model.ToList()[i].name_seo)?isConsult=1' target='_blank'>Book Appointment </a>
+                                        <a class='btn book_appt_button' onclick="ViewProfile(@Model.ToList()[i].UserId)">Book Appointment </a>
                                     </div>
                                     <br />
                                 }
