pop up border & background color changed

--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -4219,3 +4219,6 @@ table.cust-table {
 .doc-detail-word-break {
     word-wrap: break-word;
 }
+.bg-lightgreen {
+    background-color: #EEEFCF !important;
+}
