--- a/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
@@ -4,7 +4,7 @@
 
 <!DOCTYPE html>
 
-<html>
+<html class="bg-lightgreen">
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>ContactDetail</title>
@@ -13,17 +13,15 @@
     <script src="~/Scripts/jquery-ui-1.10.0.custom.min.js"></script>
     <link href="~/Content/custom.css" rel="stylesheet" />
 </head>
-<body>
-    <br /><br /><br /><br />
-    <div class="row-fluid center_align">
+<body class="bg-lightgreen">
+    <div class="row-fluid center_align bg-lightgreen" style="height:180px;">
         <div class="span12">
             <h4 id="ContactDetail">
                 1800-365-361
             </h4>
         </div>
     </div>
-    <br /><br /><br />
-    <div class="row-fluid center_align">
+    <div class="row-fluid center_align bg-lightgreen">
         <div class="span12">
             <button class="btn thanx cust-red " onclick="closeDialog(); return false;">Ok</button>
         </div>
