--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -18,7 +18,7 @@
                 <div class='row-fluid'>
                     <div class="span12">
                         <div class="doc-profile-title">
-                            Dr. @(Model.FirstName + " " + Model.LastName + " " + Model.IsDocConnectUser)
+                            Dr. @(Model.FirstName + " " + Model.LastName)
                         </div>
                         <div class="doc-details-div">
                            @{
