fb issue is resolved

--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -352,6 +352,7 @@
         }
     </div>
     <script src="~/Content/js/utility.js"></script>
+    <script type="text/javascript" src="https://connect.facebook.net/en_US/all.js"></script>
     <script type="text/javascript">
         var indexoF;
         $(function () {
