--- a/MiraiConsultMVC/Views/admin/QuestionList.cshtml
+++ b/MiraiConsultMVC/Views/admin/QuestionList.cshtml
@@ -129,7 +129,7 @@
             }
             else if ($radioBtnValue = 'Unanswered') {
                 document.getElementById("HdnFlag").value = 2;
-                $("#questionListTitle").html('Unassigned Questions')
+                $("#questionListTitle").html('Unanswered Questions')
                 $("#question").html('');
                 populateQuestionData(0);
             }
