Doctor image issue is resolved for IE & firefox

--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -40,7 +40,14 @@
                     <div class="span3">
                         <div id="feedDocImage_SQ" class='span3'>
                             <div class="docavtar image-margin-view-doc-details">
-                                <img class="doc-image-avtar" src='@Model.Image' />
+                                @if(Model.Image =="\\Content\\image\\img-na.png")
+                                {
+                                    <img class="doc-image-avtar" src='..\Content\image\img-na.png' />
+                                }
+                                else
+                                {
+                                    <img class="doc-image-avtar" src='@Model.Image' />
+                                }
                             </div>
                         </div>
                     </div>
