pop up message changed & pop up made responsive

--- a/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
@@ -14,10 +14,10 @@
     <link href="~/Content/custom.css" rel="stylesheet" />
 </head>
 <body class="bg-lightgreen">
-    <div class="row-fluid center_align bg-lightgreen" style="height:180px;">
+    <div class="row-fluid center_align bg-lightgreen" style="height:80px;">
         <div class="span12">
             <h4 id="ContactDetail">
-                1800-365-361
+                To book an appointment call on 8888888
             </h4>
         </div>
     </div>
