ok Button resize & History of responce text aligned

--- a/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
@@ -23,7 +23,7 @@
     </div>
     <div class="row-fluid center_align bg-lightgreen">
         <div class="span12">
-            <button class="btn thanx cust-red " onclick="closeDialog(); return false;">Ok</button>
+            <button class="btn thanx cust-red "  style="width:67px" onclick="closeDialog(); return false;">OK</button>
         </div>
     </div>
 </body>
