--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -36,10 +36,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="row-fluid">
+                <div class="row-fluid cust-space-below">
                     <div class="span3">
                         <div>
-                            <div id="" class='span2'>
+                            <div class='span2'>
                                 <div class="avtar img">
                                     @if (Model.Image == "\\Content\\image\\img-na.png")
                                     {
@@ -144,28 +144,27 @@
                 </div>
                 <div class="row-fluid visible-phone">
                     <div class="span6 ">
-                        <div id="ClinicName" class="span5 doc-clinic-container doc-clinic-details">
+                        <div id="ClinicName" class="span5 doc-clinic-container cust-space-around doc-clinic-details">
                             CLINIC/ HOSPITAL ADDRESS DETAILS:
                         </div>
-                        <div class="span6 visible-phone">
                             @if (Model.locations != null && Model.locations.Count > 0)
                             {
-
                                 if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(Model.IsDocConnectUser))
                                 {
-                                    <a class='pull-left btn book_appt_button' href='@Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"])@Utilities.Encrypt(Convert.ToString(Model.UserId).Trim())&frmaskmirai=1' target='_blank' onclick='bookaptclicked( "@Utilities.Encrypt(Convert.ToString(Model.UserId))")'>Book Appointment </a>
+                                    <div class="span6 visible-phone">
+                                        <a class='pull-left btn book_appt_button' href='@Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"])@Utilities.Encrypt(Convert.ToString(Model.UserId).Trim())&frmaskmirai=1' target='_blank' onclick='bookaptclicked( "@Utilities.Encrypt(Convert.ToString(Model.UserId))")'>Book Appointment </a>
+                                    </div> 
                                 }
                                 if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(Model.IsDocConnectUser) == false)
                                 {
-                                    <a class='pull-left btn book_appt_button' onclick="ViewProfile(@Model.UserId)">Book Appointment </a>
+                                    <div class="span6 visible-phone">
+                                        <a class='pull-left btn book_appt_button' onclick="ViewProfile(@Model.UserId)">Book Appointment </a>
+                                    </div>
                                 }
                             }
-                        </div>
                     </div>
                 </div>
                 <div class="row-fluid visible-phone">
-                    <div class="span3">
-                    </div>
                     <div class="span9">
                         @if (Model.locations != null && Model.locations.Count > 0)
                         {
@@ -199,7 +198,7 @@
                                         </div>
                                         if (count != Model.locations.Count)
                                         {
-                                            <br /> <hr class="doc-details-hr" />
+                                            <hr class="doc-details-hr" />
                                         }
                                     }
                                     else
@@ -226,6 +225,10 @@
                                                 <div class="span7 doc-div-min-height left doc-detail-word-break">@location.Telephone</div>
                                             </div>
                                         </div>
+                                       if (count != Model.locations.Count)
+                                        {
+                                            <hr class="doc-details-hr" />
+                                        }
                                     }
                                     count++;
                                 }
@@ -235,10 +238,9 @@
                     </div>
                     </div>
                     <div class="row-fluid hidden-phone">
-                        <div class="span3">
+                        <div class="span3 hidden-phone">
                         </div>
                         <div class="span9">
-                            <div></div>
                             <div class="row">
                                 <div id="OtherDetails" class="span5  doc-clinic-container doc-clinic-details">OTHER DETAILS:</div>
                             </div>
@@ -247,14 +249,14 @@
                     <div class="row-fluid visible-phone">
                         <div class="row-fluid visible-phone">
                             <div class="span6 ">
-                                <div id="ClinicName" class="span5 doc-clinic-container doc-clinic-details">
+                                <div id="ClinicName" style="margin-bottom:15px"  class="span5 doc-clinic-details">
                                     OTHER DETAILS:
                                 </div>
                             </div>
                         </div>
                     </div>
                         <div class="row-fluid">
-                            <div class="span3">
+                            <div class="span3 hidden-phone">
                             </div>
                             <div class="span9">
                                 <div class="row">
