--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -36,8 +36,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row-fluid cust-space-below">
-                    <div class="span3">
+                <div class="row-fluid">
+                    <div class="span2">
                         <div>
                             <div class='span2'>
                                 <div class="avtar img">
@@ -55,7 +55,7 @@
                     </div>
                     <div class="span9 hidden-phone">
                         <div class="row">
-                            <div id="ClinicName" class="span5  doc-clinic-container hidden-phone doc-clinic-details">
+                            <div id="ClinicName" class="span5  doc-clinic-container hidden-phone doc-clinic-details cust-below-space-reduce">
                                 CLINIC/ HOSPITAL ADDRESS DETAILS:
                             </div>
 
@@ -144,7 +144,7 @@
                 </div>
                 <div class="row-fluid visible-phone">
                     <div class="span6 ">
-                        <div id="ClinicName" class="span5 doc-clinic-container cust-space-around doc-clinic-details">
+                        <div id="ClinicName" class="span5 doc-clinic-container cust-below-space-reduce doc-clinic-details cust-space-above">
                             CLINIC/ HOSPITAL ADDRESS DETAILS:
                         </div>
                             @if (Model.locations != null && Model.locations.Count > 0)
@@ -238,25 +238,25 @@
                     </div>
                     </div>
                     <div class="row-fluid hidden-phone">
-                        <div class="span3 hidden-phone">
+                        <div class="span2 hidden-phone">
                         </div>
                         <div class="span9">
                             <div class="row">
-                                <div id="OtherDetails" class="span5  doc-clinic-container doc-clinic-details">OTHER DETAILS:</div>
+                                <div id="OtherDetails" class="span5  doc-clinic-container doc-clinic-details cust-below-space-reduce">OTHER DETAILS:</div>
                             </div>
                         </div>
                     </div>
                     <div class="row-fluid visible-phone">
                         <div class="row-fluid visible-phone">
                             <div class="span6 ">
-                                <div id="ClinicName" style="margin-bottom:15px"  class="span5 doc-clinic-details">
+                                <div id="ClinicName" class="span5 doc-clinic-details cust-below-space-reduce">
                                     OTHER DETAILS:
                                 </div>
                             </div>
                         </div>
                     </div>
                         <div class="row-fluid">
-                            <div class="span3 hidden-phone">
+                            <div class="span2 hidden-phone">
                             </div>
                             <div class="span9">
                                 <div class="row">
