On similar question page , book appointment button is shown for user without login

--- a/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
+++ b/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
@@ -85,7 +85,7 @@
                                         </div>
                                     </div>
 
-                                    @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(Model.ToList()[i].isdocconnectuser))
+                                    @if (Convert.ToBoolean(Model.ToList()[i].isdocconnectuser))
                                     {
                                         <div class="span3  pull-right hidden-phone">
                                             <a class='btn book_appt_button' href='@Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"])@MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId))&frmaskmirai=1' target='_blank' onclick='bookaptclicked( "@MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId))")'>Book Appointment </a>
@@ -93,7 +93,7 @@
                                             <br />
                                         </div>
                                     }
-                                    @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(Model.ToList()[i].isdocconnectuser)==false)
+                                    @if (Convert.ToBoolean(Model.ToList()[i].isdocconnectuser)==false)
                                     {
                                         <div class="span3  pull-right hidden-phone">
                                             <a class='btn book_appt_button' onclick="ViewProfile(@Model.ToList()[i].UserId)">Book Appointment </a>
@@ -121,7 +121,7 @@
                                         }
                                     </div>
                                 </div>
-                                if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(Model.ToList()[i].isdocconnectuser))
+                                if (Convert.ToBoolean(Model.ToList()[i].isdocconnectuser))
                                 {
                                     var href = (Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"]) + MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId)) + "&frmaskmirai=1").Trim();
                                     <div class="span3 offset1 pull-left visible-phone">
@@ -129,7 +129,7 @@
                                     </div>
                                     <br />
                                 }
-                                if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(Model.ToList()[i].isdocconnectuser)==false)
+                                if (Convert.ToBoolean(Model.ToList()[i].isdocconnectuser)==false)
                                 {
                                     var href = (Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"]) + MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId)) + "&frmaskmirai=1").Trim();
                                     <div class="span3 offset1 pull-left visible-phone">
