Fixed If a doctor adds only a clinic to his profile, then on doctor profile link page, a horizontal line gets displayed below this clinic.

--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -137,7 +137,10 @@
                                         }
                                         count++;
                                     }
-                                    <hr class="doc-details-hr" />
+                                    @if(Model.locations.Count > 2)
+                                    { 
+                                        <hr class="doc-details-hr" />
+                                    }
                                 </div>
                             }
                         </div>
@@ -233,7 +236,10 @@
                                         }
                                         count++;
                                     }
-                                    <hr class="doc-details-hr" />
+                                    @if(Model.locations.Count > 2)
+                                    { 
+                                        <hr class="doc-details-hr" />
+                                    }
                                 </div>
                             }
                         </div>
