--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -4231,3 +4231,11 @@ table.cust-table {
 .cust-space-above{
     margin-top: 14px;
 }
+.position-left {
+    position:relative;
+    float:left;
+}
+.paddig-top {
+    padding-top:3px; 
+    line-height:2;
+}
